Minor updates  with spacing and content fixes

--- a/source/stylesheets/contextual.scss
+++ b/source/stylesheets/contextual.scss
@@ -28,3 +28,16 @@ h1 + p {
     margin-top: -20px !important;
   }
 }
+
+
+h2 + p {
+  margin-top: -14px !important;
+}
+
+h1 + div + h2 {
+  padding-top: 13px !important;
+}
+
+pre + div + h2, pre + div + h3 + h2 {
+  margin-top: 40px !important;
+}
